integrate event handling functions

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="type">Тип жилья</label>
           <select id="type" name="type">
-            <option class="type__bungalo" value="bungalo">Бунгало</option>
-            <option class="type__flat" value="flat" selected>Квартира</option>
-            <option class="type__house" value="house">Дом</option>
-            <option class="type__palace" value="palace">Дворец</option>
+            <option value="bungalo">Бунгало</option>
+            <option value="flat" selected>Квартира</option>
+            <option value="house">Дом</option>
+            <option value="palace">Дворец</option>
           </select>
         </fieldset>
         <fieldset class="ad-form__element">
@@ -134,20 +134,20 @@
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="room_number">Количество комнат</label>
-          <select class="room-number" name="rooms">
-            <option class="room-number__1" selected>1 комната</option>
-            <option class="room-number__2">2 комнаты</option>
-            <option class="room-number__3">3 комнаты</option>
-            <option class="room-number__100">100 комнат</option>
+          <select id="room_number" name="rooms">
+            <option value="1" selected>1 комната</option>
+            <option value="2">2 комнаты</option>
+            <option value="3">3 комнаты</option>
+            <option value="100">100 комнат</option>
           </select>
         </fieldset>
         <fieldset class="ad-form__element">
           <label class="ad-form__label" for="capacity">Количество мест</label>
-          <select class="capacity" name="capacity">
-            <option class="capacity__3">для 3 гостей</option>
-            <option class="capacity__2">для 2 гостей</option>
-            <option class="capacity__1" selected>для 1 гостя</option>
-            <option class="capacity__0">не для гостей</option>
+          <select id="capacity" name="capacity">
+            <option value="3" selected>для 3 гостей</option>
+            <option value="2">для 2 гостей</option>
+            <option value="1">для 1 гостя</option>
+            <option value="0">не для гостей</option>
           </select>
         </fieldset>
         <fieldset class="ad-form__element ad-form__element--wide features">
