--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@
   <script src="js/util.js"></script>
   <script src="js/data.js"></script>
   <script src="js/map.js"></script>
+  <script src="js/drag.js"></script>
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
