--- a/index.html
+++ b/index.html
@@ -256,5 +256,6 @@
   <script src="js/pin.js"></script>
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
+  <!-- <script src="js/filter.js"></script> -->
 </body>
 </html>
