--- a/index.html
+++ b/index.html
@@ -257,5 +257,6 @@
   <script src="js/card.js"></script>
   <script src="js/form.js"></script>
   <script src="js/filter.js"></script>
+  <script src="js/debounce.js"></script>
 </body>
 </html>
